--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -85,3 +85,7 @@ Test-Suite sqltests
                    dsh-sql                    >= 0.1
     GHC-Options: -Wall -fno-warn-orphans
     Extensions: CPP
+
+source-repository head
+    type:     git
+    location: https://github.com/ulricha/dsh-sql
