Use hdbc-odbc instead of hdbc-postgresql.
hdbc-odbc is rumoured to be faster and better maintained. Plus, it
builds with GHC 7.10.

--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -31,7 +31,7 @@ Library
                      mtl                >= 2.1,
                      text               >= 1.1,
                      HDBC               >= 2.4.0.1,
-                     HDBC-postgresql    >= 2.3,
+                     HDBC-odbc          >= 2.4,
                      either             >= 4.0,
                      semigroups         >= 0.16,
                      set-monad          >= 0.1,
@@ -75,7 +75,7 @@ Test-Suite sqltests
                    QuickCheck                 >= 2.4,
                    containers                 >= 0.5,
                    text                       >= 1.1,
-                   HDBC-postgresql            >= 2.3,
+                   HDBC-odbc                  >= 2.4,
                    HDBC                       >= 2.4.0.1,
                    test-framework-quickcheck2 >= 0.2,
                    test-framework-hunit       >= 0.3,
