--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -25,22 +25,24 @@ Flag debuggraph
 
 Library
   Extensions:        CPP
-  Build-depends:     base               >= 4.8 && < 5,
-                     template-haskell   >= 2.9,
-                     containers         >= 0.5,
-                     mtl                >= 2.1,
-                     text               >= 1.1,
-                     HDBC               >= 2.4.0.1,
-                     HDBC-odbc          >= 2.4,
-                     either             >= 4.0,
-                     semigroups         >= 0.16,
-                     set-monad          >= 0.1,
-                     Decimal            >= 0.4,
-                     aeson              >= 0.8,
-
-                     algebra-dag        >= 0.1,
-                     algebra-sql        >= 0.1,
-                     DSH                >= 0.10
+  Build-depends:     
+                         DSH                >= 0.10
+                     , Decimal            >= 0.4
+                     , HDBC               >= 2.4.0.1
+                     , HDBC-odbc          >= 2.4
+                     , aeson              >= 0.8
+                     , algebra-dag        >= 0.1
+                     , algebra-sql        >= 0.1
+                     , base               >= 4.8 && < 5
+                     , bytestring >= 0.10
+                     , containers         >= 0.5
+                     , either             >= 4.0
+                     , mtl                >= 2.1
+                     , semigroups         >= 0.16
+                     , set-monad          >= 0.1
+                     , template-haskell   >= 2.9
+                     , text               >= 1.1
+                     , vector >= 0.10
 
   Hs-source-dirs:    src
 
@@ -72,19 +74,21 @@ Test-Suite sqltests
     type:       exitcode-stdio-1.0
     Hs-Source-Dirs : testsuite
     Main-is:       Main.hs
-    Build-depends: base                       >= 4.8 && < 5,
-                   QuickCheck                 >= 2.4,
-                   containers                 >= 0.5,
-                   text                       >= 1.1,
-                   HDBC-odbc                  >= 2.4,
-                   HDBC                       >= 2.4.0.1,
-                   test-framework-quickcheck2 >= 0.2,
-                   test-framework-hunit       >= 0.3,
-                   test-framework             >= 0.6,
-                   HUnit                      >= 1.2,
-
-                   DSH                        >= 0.10,
-                   dsh-sql                    >= 0.1
+    Build-depends: 
+                       DSH                        >= 0.10
+                   , HDBC                       >= 2.4.0.1
+                   , HDBC-odbc                  >= 2.4
+                   , HUnit                      >= 1.2
+                   , QuickCheck                 >= 2.4
+                   , base                       >= 4.8 && < 5
+                   , bytestring >= 0.10
+                   , containers                 >= 0.5
+                   , dsh-sql                    >= 0.1
+                   , test-framework             >= 0.6
+                   , test-framework-hunit       >= 0.3
+                   , test-framework-quickcheck2 >= 0.2
+                   , text                       >= 1.1
+                   , vector >= 0.10
     GHC-Options: -Wall -fno-warn-orphans
     Extensions: CPP
 
