--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -59,6 +59,7 @@ Library
                      Database.DSH.Backend.Sql.Opt.Properties.Types
                      Database.DSH.Backend.Sql.Opt.Properties.Cols
                      Database.DSH.Backend.Sql.Opt.Properties.Nullable
+                     Database.DSH.Backend.Sql.Opt.Properties.FD
                      Database.DSH.Backend.Sql.Opt.Properties.ICols
                      Database.DSH.Backend.Sql.Opt.Properties.Auxiliary
                      Database.DSH.Backend.Sql.Opt.Properties.Empty
