Restructured SQL code generator.
Actual backend definition has been moved out of the user-visible module
so that we can use it from the standalone comprehension compiler without
exposing it.

--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -74,6 +74,7 @@ Library
                      Database.DSH.Backend.Sql.Opt.OptimizeTA
                      Database.DSH.Backend.Sql.VectorAlgebra
                      Database.DSH.Backend.Sql.Vector
+                     Database.DSH.Backend.Sql.CodeGen
 
 Executable sqltests
     Hs-Source-Dirs : testsuite
