--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -86,9 +86,9 @@ Executable flatsqlcomp
                     bytestring >= 0.10
     GHC-Options: -Wall
 
-Executable sqltests
+Executable test-basic
     Hs-Source-Dirs : testsuite
-    Main-is:       Main.hs
+    Main-is:       TestBasic.hs
     Build-depends:
                      DSH                        >= 0.13
                    , HDBC                       >= 2.4.0.1
@@ -107,6 +107,51 @@ Executable sqltests
                    , vector                     >= 0.10
     GHC-Options: -Wall -fno-warn-orphans
     Extensions: CPP
+
+executable test-tpch
+  default-language:    Haskell2010
+  main-is:             testsuite/TestTPCH.hs
+  build-depends:       base,
+                       containers,
+                       mwc-random,
+                       vector,
+                       cassava,
+                       bytestring,
+                       time,
+                       text,
+                       Decimal,
+                       semigroups,
+                       HUnit,
+                       HDBC,
+                       HDBC-odbc,
+                       test-framework,
+                       test-framework-hunit,
+                       DSH,
+                       dsh-sql,
+                       dsh-example-queries
+  ghc-options:         -Wall -O2
+
+executable bench-tpch
+  default-language:    Haskell2010
+  main-is:             bench/BenchTPCH.hs
+  build-depends:       base,
+                       containers,
+                       mwc-random,
+                       vector,
+                       cassava,
+                       bytestring,
+                       time,
+                       text,
+                       Decimal,
+                       semigroups,
+                       criterion,
+                       HDBC,
+                       HDBC-odbc,
+                       deepseq,
+                       DSH,
+                       dsh-sql,
+                       dsh-example-queries
+  ghc-options:         -Wall -O2
 
 source-repository head
     type:     git
