Use Scientific instead of Decimal.
The Scientific type is supported for plan generation. Additionally,
Scientific is used for dealing with decimal values returned by the
backend.

--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -46,6 +46,7 @@ Library
                      , template-haskell   >= 2.9
                      , text               >= 1.1
                      , vector             >= 0.10
+                     , scientific         >= 0.3
 
   Hs-source-dirs:    src
 
