--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -102,9 +102,9 @@ Executable test-basic
                    , bytestring-lexing          >= 0.4
                    , containers                 >= 0.5
                    , dsh-sql                    >= 0.1
-                   , test-framework             >= 0.6
-                   , test-framework-hunit       >= 0.3
-                   , test-framework-quickcheck2 >= 0.2
+                   , tasty                      >= 0.11
+                   , tasty-hunit                >= 0.9
+                   , tasty-quickcheck           >= 0.8
                    , text                       >= 1.1
                    , vector                     >= 0.10
     GHC-Options: -Wall -fno-warn-orphans
@@ -126,8 +126,8 @@ executable test-tpch
                        HUnit,
                        HDBC,
                        HDBC-odbc,
-                       test-framework,
-                       test-framework-hunit,
+                       tasty,
+                       tasty-hunit,
                        DSH,
                        dsh-sql,
                        dsh-example-queries
