--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -24,7 +24,8 @@ Flag debuggraph
   Default:     False
 
 Library
-  Extensions:        CPP
+  default-language:    Haskell2010
+  default-extensions:  CPP
   Build-depends:
                        DSH                >= 0.13
                      , random             >= 1.1
@@ -79,6 +80,7 @@ Library
                      Database.DSH.Backend.Sql.Serialize
 
 Executable flatsqlcomp
+    default-language:    Haskell2010
     Hs-Source-Dirs: flatsqlcomp
     Main-is:        Main.hs
     Build-depends:  base >= 4.8 && < 5,
@@ -89,6 +91,7 @@ Executable flatsqlcomp
     GHC-Options: -Wall
 
 Executable test-basic
+    default-language:    Haskell2010
     Hs-Source-Dirs : testsuite
     Main-is:       TestBasic.hs
     Build-depends:
@@ -108,7 +111,7 @@ Executable test-basic
                    , text                       >= 1.1
                    , vector                     >= 0.10
     GHC-Options: -Wall -fno-warn-orphans
-    Extensions: CPP
+    default-extensions: CPP
 
 executable test-tpch
   default-language:    Haskell2010
