--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -128,28 +128,28 @@ Executable test-basic
     GHC-Options: -Wall -fno-warn-orphans
     default-extensions: CPP
 
--- executable test-tpch
---   default-language:    Haskell2010
---   main-is:             testsuite/TestTPCH.hs
---   build-depends:       base,
---                        containers,
---                        mwc-random,
---                        vector,
---                        cassava,
---                        bytestring,
---                        time,
---                        text,
---                        Decimal,
---                        semigroups,
---                        HUnit,
---                        HDBC,
---                        HDBC-odbc,
---                        tasty,
---                        tasty-hunit,
---                        DSH,
---                        dsh-sql,
---                        dsh-example-queries
---   ghc-options:         -Wall -O2
+executable test-tpch
+  default-language:    Haskell2010
+  main-is:             testsuite/TestTPCH.hs
+  build-depends:       base,
+                       containers,
+                       mwc-random,
+                       vector,
+                       cassava,
+                       bytestring,
+                       time,
+                       text,
+                       Decimal,
+                       semigroups,
+                       HUnit,
+                       HDBC,
+                       HDBC-odbc,
+                       tasty,
+                       tasty-hunit,
+                       DSH,
+                       dsh-sql,
+                       dsh-example-queries
+  ghc-options:         -Wall -O2
 
 executable bench-tpch
   default-language:    Haskell2010
