Add dot tool for multiset algebra.

--- a/dsh-sql.cabal
+++ b/dsh-sql.cabal
@@ -99,6 +99,33 @@ Library
                      Database.DSH.Backend.Sql.MultisetAlgebra.Lang
                      Database.DSH.Backend.Sql.MultisetAlgebra.Dot
 
+executable madot
+    Main-is: Database/DSH/Backend/Sql/MultisetAlgebra/DotGen.hs
+    default-language:    Haskell2010
+    GHC-Options:      -Wall -fno-warn-orphans
+    hs-source-dirs:   src
+    build-depends:    base               >= 4.8 && < 5,
+                      mtl                >= 2.1,
+                      containers         >= 0.5,
+                      template-haskell   >= 2.9,
+                      -- pretty             >= 1.1,
+                      fgl                >= 5.5,
+                      -- transformers       >= 0.3,
+                      -- parsec             >= 3.1,
+                      -- ghc-prim           >= 0.3,
+                      bytestring         >= 0.10,
+                      aeson              >= 0.11,
+                      Decimal            >= 0.4,
+                      time               >= 1.4,
+                      text               >= 1.2,
+                      scientific         >= 0.3,
+                      algebra-dag        >= 0.1,
+                      ansi-wl-pprint     >= 0.6.7.2,
+                      DSH                >= 0.13
+    other-extensions: TemplateHaskell
+    other-modules:    Database.DSH.Backend.Sql.MultisetAlgebra.Lang
+                      Database.DSH.Backend.Sql.MultisetAlgebra.Dot
+
 -- Executable flatsqlcomp
 --     default-language:    Haskell2010
 --     Hs-Source-Dirs: flatsqlcomp
